--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <h3>Contact Me</h3>
             </div>
                <input type="text" class="input-field" name="fname" placeholder="name" required>
-               <input type="tel" class="input-field" placeholder="contact" name="contact" required> 
+               <!-- <input type="tel" class="input-field" placeholder="contact" name="contact" required>  -->
                <input type="email" class="input-field" name="email" placeholder="email" id="email" required>
-               <input type="password" class="input-field" placeholder="password" name="pswd" id="pswd" required>
+               <!-- <input type="password" class="input-field" placeholder="password" name="pswd" id="pswd" required> -->
                <div class="select-btn">
                <label class="select" for="domestic">Domestic </label>
                <input class="select" type="radio" id="domestic" name="location" value="domestic" onchange="showTouristPlaces()">
